# norm-constrained-dialogue-framework

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
configs/: default.yaml  metrics.yaml  scenarios.yaml
data/synthetic/: scenarios.csv  scenarios.json
docs/: architecture.md  methodology.md  project_roadmap.md
notebooks/: 01_data_generation.ipynb  02_simulation_walkthrough.ipynb  03_evaluation_and_error_analysis.ipynb  04_alignment_strategy_comparison.ipynb
results/sample_runs/: episode_253e3170-47f.json  episode_2b9e705e-12d.json  episode_5f903e13-27c.json  episode_60007c9d-7da.json  episode_708b922c-c94.json  episode_77bb803a-41a.json  episode_7c370a18-be4.json  episode_d19c87fe-eae.json  episode_f0c78e18-e45.json  experiment_34df16d3.json  experiment_8e0c2fd1.json  experiment_e60e765d.json
results/tables/: evaluation_summary.json
scripts/: _show_transcripts.py  generate_dataset.py  run_evaluation.py  run_experiments.py  run_simulation.py
src/norm_dialogue_framework/: __init__.py  config.py  schemas.py  utils.py
src/norm_dialogue_framework/agents/: __init__.py  base_agent.py  baseline_agent.py  candidate_selector_agent.py  constrained_filter.py  critique_revise_agent.py  rule_augmented_agent.py
src/norm_dialogue_framework/data/: __init__.py  synthetic_generator.py
src/norm_dialogue_framework/evaluation/: __init__.py  evaluator.py  metrics.py  reward_model.py  rule_checks.py
src/norm_dialogue_framework/experiments/: __init__.py  compare_strategies.py
src/norm_dialogue_framework/simulation/: __init__.py  dialogue_runner.py  profiles.py  respondent.py
src/norm_dialogue_framework/visualization/: __init__.py  plots.py
tests/: __init__.py  test_dialogue_runner.py  test_evaluator.py  test_rule_checks.py  test_synthetic_generator.py
